<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BeLikeAStamp</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="select_account">Choisir le compte de connexion</string>
    <string name="hello_world">Hello world!</string>
    <string name="submit_project">Projets soumis</string>
    <string name="waiting_project">Projets en attente de soumission</string>
    <string name="in_progress_project">Projets en cours</string>
    <string name="btn_new_project">Nouveau projet</string>
    <string name="btn_welcome">Accueil</string>
    <string name="quit">Quitter</string>
    <string name="welcome">Bienvenue !</string>
    <string name="see_u">A bientôt !</string>
    <string name="btn_go">GO !</string>
    <string name="btn_connect">Se connecter</string>
    <string name="btn_registration">S\'inscrire</string>
    <string name="btn_ask4tuto">Tuto</string>
    <string name="tutorials">Les Tutos !</string>
    <string name="workshops">Les Ateliers !</string>
    <string name="btn_blog">Blog</string>
    <string name="btn_join_team">Join Me!</string>
    <string name="btn_submit_project">Projet</string>
    <string name="btn_workshop_reg">Atelier</string>
    <string name="firstname">Prénom</string>
    <string name="name">Nom</string>
    <string name="confirm_email">Email contact</string>
    <string name="email">Email</string>
    <string name="tel">N° de portable</string>
    <string name="btn_register">S\'enregistrer</string>
    <string name="first_cxn">Première connexion</string>
    <string name="new_psswd">Nouveau mot de passe</string>
    <string name="confirm_psswd">Confirmer mot de passe</string>
    <string name="warning_reg">Quelques infos manquantes &#8230;</string>
    <string name="reg_failed">Echec de l\'enregistrement</string>
    <string name="reg_succed">Enregistrement effectué ! Let\'s GO !</string>
    <string name="memoriser">Mémoriser</string>
    <string name="btn_record">Enregistrer</string>
    <string name="project_explane">Helllooo ! Nous avons besoin de quelques précisions pour bien définir le projet : type de cartes, thème, couleurs, délais, personnalisation &#8230;</string>
    <string name="card_type">Type de cartes</string>
    <string name="belikeastamp">http://belikeastamp.blogspot.fr</string>
    <string name="details">voir détails</string>
    <string name="progression">Avancement</string>
    <string name="prototype">Prototype</string>
    <string name="no_prototype">pas encore de prototype</string>

    <string-array name="status_arrays">
        <item>Projet soumis</item>
        <item>Projet accepté</item>
        <item>Prototype en cours</item>
        <item>Prototype en attente de validation</item>
        <item>Réalisation en cours</item>
        <item>Réalisation finie</item>
    </string-array>
    <string-array name="cardtypes">
        <item>Save The Date</item>
        <item>Remerciements</item>
        <item>Fêtes</item>
        <item>Anniversaires</item>
        <item>Voeux</item>
        <item>Saint Valentin</item>
        <item>Félicitations</item>
    </string-array>

    <string name="btn_previous">Précédent</string>
    <string name="btn_next">Suivant</string>
    <string name="how_when">Combien et Quand ?</string>
    <string name="how_many_cards">Combien de cartes</string>
    <string name="un">1</string>
    <string name="for_when">Pour quand ?</string>
    <string name="color_set">Les couleurs</string>
    <string name="color_instruction">Choisis trois couleurs maximum</string>
    <string name="selected_colors">Couleurs choisies</string>
    <string name="color_warning">Trois couleurs maximum parce que trop de couleurs tue la couleur !\nClique sur une couleur pour la supprimer puis choisis-en une autre </string>
    <string name="nocolor_warning">Merci de choisir au moins une couleur</string>
    <string name="color_cat1">Les Tendances</string>
    <string name="color_cat2">Les Éclatantes</string>
    <string name="color_cat3">Les Subtiles</string>
    <string name="color_cat4">Les Gourmandes</string>
    <string name="color_cat5">Les Neutres</string>
    <string name="themes">Thématique</string>
    <string name="theme_prompt">Choisir un thème</string>
    <string name="personnalisation">Personnalisation</string>
    <string name="age">Âge</string>
    <string name="years">an(s)</string>
    <string name="age_hint">***</string>
    <string name="style">Style</string>
    <string name="style_prompt">Choisir un style</string>

    <string-array name="style_arrays">
        <item>Romantique</item>
        <item>Kids</item>
        <item>Mature</item>
        <item>Glamour</item>
        <item>Tendance</item>
        <item>Classic</item>
        <item>Autre</item>
    </string-array>

    <string name="mission_impossible">Désolé nous n\'avons que 4 mains :(</string>
    <string name="infos_manquantes">Désolé il nous faut un peu plus d\'infos :)</string>
    <string name="back_in_time">Désolé nous ne remontons pas le temps ;-)</string>
    <string name="anonymous_card">Carte anonyme</string>
    <string name="personalized_card">Carte nominative</string>
    <string name="sexe">Sexe</string>
    <string name="man">Homme</string>
    <string name="woman">Femme</string>
    <string name="btn_add_subject">Ajouter une personne</string>
    <string name="your_project">Ton projet</string>
    <string name="btn_send">Envoyer</string>
    <string name="btn_modif">Modifier</string>
    <string name="infos">Infos complémentaires</string>
    <string name="project_name">Nom du projet</string>
    <string name="empty"></string>
    <string name="title_activity_first_connexion">FirstConnexion</string>
    <string name="btn_resume">Reprendre</string>
    <string name="btn_proto">Voir proto</string>
	<string name="btn_ok_proto">Accepter proto</string>
	<string name="btn_no_proto">Revoir proto</string>
	<string name="messade">message</string>
	
	
</resources>