<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/perso"
        style="@style/LargePink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/personnalisation" />

    <RadioGroup
        android:id="@+id/nominalchoice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/anonyme"
            style="@style/MediumPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/rb_hblue"
            android:checked="true"
            android:paddingRight="10dp"
            android:text="@string/anonymous_card" />

        <RadioButton
            android:id="@+id/not_anonyme"
            style="@style/MediumPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/rb_hblue"
            android:text="@string/personalized_card" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/MediumHblue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/firstname" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/MediumHblue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingRight="10dp"
                android:text="@string/sexe" />

            <RadioGroup
                android:id="@+id/sexechoice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/male"
                    style="@style/MediumPink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/rb_hblue"
                    android:paddingRight="10dp"
                    android:text="@string/man" />

                <RadioButton
                    android:id="@+id/female"
                    style="@style/MediumPink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/rb_hblue"
                    android:text="@string/woman" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/MediumHblue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/age" />

            <EditText
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/age_hint"
                android:inputType="number" />

            <TextView
                style="@style/MediumHblue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/years" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#FF909090" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/prev"
            style="@style/btnStyleActionPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_action_pink"
            android:text="@string/btn_previous" />

        <Button
            android:id="@+id/suiv"
            style="@style/btnStyleActionPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:background="@drawable/btn_action_pink"
            android:text="@string/btn_next" />
    </LinearLayout>

</LinearLayout>