<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/choose_card"
        style="@style/LargePink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/your_project" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/MediumHblue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_type" />

        <TextView
            android:id="@+id/card_type"
            style="@style/MediumLblue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/MediumHblue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/themes" />

        <TextView
            android:id="@+id/card_theme"
            style="@style/MediumLblue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/MediumHblue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/style" />

        <TextView
            android:id="@+id/card_style"
            style="@style/MediumLblue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/MediumHblue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_many_cards" />

        <TextView
            android:id="@+id/number"
            style="@style/MediumLblue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/MediumHblue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_when" />

        <TextView
            android:id="@+id/date"
            style="@style/MediumLblue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FAFAFA"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="20dp" >

        <TextView
            style="@style/MediumHblue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_set" />

        <ImageView
            android:id="@+id/selected_color1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent" />

        <ImageView
            android:id="@+id/selected_color2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent" />

        <ImageView
            android:id="@+id/selected_color3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/MediumHblue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personnalisation" />

        <TextView
            android:id="@+id/perso"
            style="@style/MediumLblue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <EditText
        android:id="@+id/infos"
        android:layout_width="match_parent"
        android:layout_height="@dimen/infos_height"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="left|top"
        android:hint="@string/infos"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/MediumGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_name" />

        <EditText
            android:id="@+id/project_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/prev"
            style="@style/btnStyleActionPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_action_pink"
            android:text="@string/btn_previous" />

        <Button
            android:id="@+id/send"
            style="@style/btnStyleActionPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:background="@drawable/btn_action_pink"
            android:text="@string/btn_send" />
    </LinearLayout>

</LinearLayout>