<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Button
        android:id="@+id/sub_project"
        android:background="@drawable/btn_choice_hblue"
        style="@style/btnStyleChoiceHBlue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:layout_marginTop="30dip"
        android:layout_marginBottom="10dip"
        android:text="@string/btn_submit_project" />
    
    <Button
        android:id="@+id/workshop"
        android:background="@drawable/btn_choice_hblue"
        style="@style/btnStyleChoiceHBlue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub_project"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:text="@string/btn_workshop_reg" />
    
    <Button
        android:id="@+id/ask4tuto"
        android:background="@drawable/btn_choice_green"
        style="@style/btnStyleChoiceGreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/workshop"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:text="@string/btn_ask4tuto" />

    <Button
        android:id="@+id/join_team"
        android:background="@drawable/btn_choice_green"
        style="@style/btnStyleChoiceGreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ask4tuto"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:text="@string/btn_join_team" />

    <Button
        android:id="@+id/see_blog"
        android:background="@drawable/btn_choice_green"
        style="@style/btnStyleChoiceGreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/join_team"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:text="@string/btn_blog" />


</RelativeLayout>