<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        style="@style/LargePink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/how_when" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/MediumGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_many_cards" />

        <EditText
            android:id="@+id/numberOfCards"
            android:layout_width="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:inputType="number" />
    </LinearLayout>

    <TextView
        style="@style/MediumGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/for_when" />

    <Button
        android:id="@+id/select_date"
        style="@style/btnStyleActionGreen"
        android:text="@style/SmallGreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/prev"
            style="@style/btnStyleActionPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_action_pink"
            android:text="@string/btn_previous" />

        <Button
            android:id="@+id/suiv"
            style="@style/btnStyleActionPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:background="@drawable/btn_action_pink"
            android:text="@string/btn_next" />
    </LinearLayout>

</LinearLayout>